Bug 2438 - sis driver cannot restore console on AMD64 in 64bit mode
Summary: sis driver cannot restore console on AMD64 in 64bit mode
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/SiS (show other bugs)
Version: 6.8.2
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-31 17:13 UTC by Thomas Winischhofer
Modified: 2005-02-01 00:24 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] add "__amd64__" to the proper compiler conditional (455 bytes, patch)
2005-01-31 17:15 UTC, Thomas Winischhofer
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Thomas Winischhofer 2005-01-31 17:13:12 UTC
The sis driver needs to read/write the mode number from/to the BIOS scratch area
in order to restore the text console (using the VBE).

Since "AMD64" was renamed to "amd64" a while back, the code handling this was
not compiled on AMD64.

Fix in HEAD as of today, properly tested.

This is my LAST patch proposed for the 6.8 stable branch. Sorry for being late.
Comment 1 Thomas Winischhofer 2005-01-31 17:15:01 UTC
Created attachment 1806 [details] [review]
[FIXED_X11R68x] add "__amd64__" to the proper compiler conditional
Comment 2 Roland Mainz 2005-01-31 17:38:00 UTC
> Sorry for being late.

As I said elsewhere: No need to be sorry, better late than shipping a broken
driver with a "stable" release... :)

----

Offtopic:
Just curious: Is SIS a x86-only gfx chip ?
Comment 3 Thomas Winischhofer 2005-01-31 17:47:53 UTC
Most SiS graphics chips are "integrated" chipsets. There are only three GPUs
that come as dedicated graphics cards (SiS300/305, 315/E/PRO and 330=Xabre).

One sis300 card I know of is being (successfully) used in a MIPS system,
otherwise I never heard of anyone using these cards on anything but x86 or AMD64.

If an architecture can fulfill the PCI requirements (such as dealing with a
fixed-size 128MB aperture), these cards can - theoretically - be used. 
Comment 4 Matthew Daniel 2005-01-31 19:25:35 UTC
(In reply to comment #0)
> The sis driver needs to read/write the mode number from/to the BIOS scratch area
> in order to restore the text console (using the VBE).
> 
> Since "AMD64" was renamed to "amd64" a while back, the code handling this was
> not compiled on AMD64.

I am one of the victims of this case change bug, and was very happy when Thomas
found it and fixed it. Now I can log out of my Xsession without fear.
Comment 5 Roland Mainz 2005-02-01 17:46:39 UTC
Comment on attachment 1806 [details] [review]
[FIXED_X11R68x] add "__amd64__" to the proper compiler conditional

Approving for commit into X11R6.8.x stable branch (vouchers: Roland Mainz +
Kevin Martin and one confirmation by Matthew Daniel).
Comment 6 Roland Mainz 2005-02-01 18:43:23 UTC
Taking bug myself for commit...
Comment 7 Roland Mainz 2005-02-01 19:23:20 UTC
Comment on attachment 1806 [details] [review]
[FIXED_X11R68x] add "__amd64__" to the proper compiler conditional

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.365.2.147; previous revision: 1.365.2.146
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/drivers/sis/sis.h,v  <-- 
xc/programs/Xserver/hw/xfree86/drivers/sis/sis.h
new revision: 1.18.2.1; previous revision: 1.18
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 8 Roland Mainz 2005-02-01 19:24:13 UTC
Patch checked-in into X11R6.8.x stable branch...

... marking bug as FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.