//bugs.freedesktop.org/show_bug.cgi?id=2438) attachment #1806     (https://bugs.freedesktop.org/attachment.cgi?id=1806): Fix sis driver     to work correctly on AMD64. Patch by Thomas Winischhofer     <thomas@winischhofer.net>. Vouchers for commit into X11R6.8.x stable     branch are Kevin E. Martin <kem@freedesktop.org> and Roland Mainz     <roland.mainz@nrubsig.org>.